--- a/FAQ/src/main/webapp/WEB-INF/web.xml
+++ b/FAQ/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,16 @@
     <filter-name>CharacterEncodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  
+  	<filter>
+		<filter-name>shiroFilter</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>shiroFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+  
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>
@@ -42,7 +52,7 @@
     </listener-class>
   </listener>
   <servlet>
-    <servlet-name>ForestBlog</servlet-name>
+    <servlet-name>FAQ</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
       <param-name>contextConfigLocation</param-name>
@@ -50,7 +60,7 @@
     </init-param>
   </servlet>
   <servlet-mapping>
-    <servlet-name>ForestBlog</servlet-name>
+    <servlet-name>FAQ</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
   <listener>
