--- a/FAQ/pom.xml
+++ b/FAQ/pom.xml
@@ -10,12 +10,12 @@
 	<dependencies>
 
 
-		<dependency>
+	<!-- 	<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency> -->
 
 		<!-- 添加sevlet支持 -->
 		<dependency>
